added al types with testing done accoridngo to the mockscreens